added plants img
added 3 plants images those plants name are start with my last name letters.  the images are in responsive and thumbnail format.

--- a/plants.html
+++ b/plants.html
@@ -26,7 +26,7 @@
  <div class="row">
     <div class="col-md" >Narrow-leaved Zinnia</div>
     <div class="col-md" >American Marigold</div>
-    <div class="col-md" >Garden Impatiens</div>
+    <div class="col-md" >Garden Impatiens</div> 
     <div class="col-md" >Umbrella sedge</div>
     <div class="col-md" >Ornamental Pepper</div>
     <div class="col-md" >Rose Moss</div>
@@ -34,5 +34,15 @@
 
     
     <p>While resizing the rendered image, we can see that the row with plant names have been turned into horizontal first</p>
+    <div class="container">
+      <img src="Narrow-leaved Zinnia.jpg" class="img-fluid" width="400px" height="400px">
+      <img src="American Marigold.jpg" class="img-fluid" width="400px" height="400px">
+      <img src="Garden Impatiens.jpg" class="img-fluid" width="500px" height="500px">
+    </div>
+    <div class="container">
+      <img src="Narrow-leaved Zinnia.jpg" class="img-thumbnail"width="200px">
+      <img src="American Marigold.jpg" class="img-thumbnail"width="200px">
+      <img src="Garden Impatiens.jpg" class="img-thumbnail"width="300">
+    </div>
 </body>
 </html>
