added table and commit

--- a/plants.html
+++ b/plants.html
@@ -44,5 +44,58 @@
       <img src="American Marigold.jpg" class="img-thumbnail"width="200px">
       <img src="Garden Impatiens.jpg" class="img-thumbnail"width="300">
     </div>
+    <table class="table">
+      <table class="table table-bordered border-secondary">
+      <thead>
+         <tr class="table-dark">
+          <th scope="col">Letters</th>
+          <th scope="col">Plant</th>
+          <th scope="col">Mountain</th>
+          <th scope="col">Lake</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="table-primary">
+          <th scope="row" class="table-dark">1</th>
+          <td>Narrow-leaved Zinnia</td>
+          <td>Nanda Devi</td>
+          <td>Nahuel Huapi Lake</td>
+        </tr>
+        <tr class="table-primary">
+          <th scope="row" class="table-dark">2</th>
+          <td>American Marigold</td>
+          <td>Adams</td>
+          <td>Abert Lake</td>
+        </tr>
+        <tr class="table-primary">
+          <th scope="row" class="table-dark">3</th>
+          <td>Garden Impatiens</td>
+          <td>Gerlachovka</td>
+          <td>Great Salt Lake</td>
+
+          <tr class="table-primary">
+          <th scope="row" class="table-dark">4</th>
+          <td>Umbrella sedge</td>
+          <td>Ulugh Muztagh</td>
+          <td>Upper Klamath Lake</td>
+        </tr>
+        <tr class="table-primary">
+          <th scope="row" class="table-dark">5</th>
+          <td>Ornamental Pepper</td>
+          <td>Ossa</td>
+          <td>Oguta Lake</td>
+        </tr>
+        <tr class="table-primary">
+          <th scope="row" class="table-dark">6</th>
+          <td>Rose Moss</td>
+          <td>Rushmore</td>
+          <td>Ranjit Sagar Dam Lake</td>
+        </tr>
+      </tbody>
+    </table>
+    </table>
+    <caption>
+      the above table contains information about 6 letters related plants, Mountain and Lake
+    </caption>
 </body>
 </html>
