--- a/plants.html
+++ b/plants.html
@@ -56,37 +56,37 @@
       </thead>
       <tbody>
         <tr class="table-primary">
-          <th scope="row" class="table-dark">1</th>
+          <th scope="row" class="table-dark">N</th>
           <td>Narrow-leaved Zinnia</td>
           <td>Nanda Devi</td>
           <td>Nahuel Huapi Lake</td>
         </tr>
         <tr class="table-primary">
-          <th scope="row" class="table-dark">2</th>
+          <th scope="row" class="table-dark">A</th>
           <td>American Marigold</td>
           <td>Adams</td>
           <td>Abert Lake</td>
         </tr>
         <tr class="table-primary">
-          <th scope="row" class="table-dark">3</th>
+          <th scope="row" class="table-dark">G</th>
           <td>Garden Impatiens</td>
           <td>Gerlachovka</td>
           <td>Great Salt Lake</td>
 
           <tr class="table-primary">
-          <th scope="row" class="table-dark">4</th>
+          <th scope="row" class="table-dark">U</th>
           <td>Umbrella sedge</td>
           <td>Ulugh Muztagh</td>
           <td>Upper Klamath Lake</td>
         </tr>
         <tr class="table-primary">
-          <th scope="row" class="table-dark">5</th>
+          <th scope="row" class="table-dark">O</th>
           <td>Ornamental Pepper</td>
           <td>Ossa</td>
           <td>Oguta Lake</td>
         </tr>
         <tr class="table-primary">
-          <th scope="row" class="table-dark">6</th>
+          <th scope="row" class="table-dark">R</th>
           <td>Rose Moss</td>
           <td>Rushmore</td>
           <td>Ranjit Sagar Dam Lake</td>
@@ -97,5 +97,19 @@
     <caption>
       the above table contains information about 6 letters related plants, Mountain and Lake
     </caption>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group me-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-success">N</button>
+        <button type="button" class="btn btn-success">A</button>
+        <button type="button" class="btn btn-success">G</button>
+      </div>
+      <div class="btn-group me-2" role="group" aria-label="Second group">
+        <button type="button" class="btn btn-alert">U</button>
+        <button type="button" class="btn btn-alert">O</button>
+      </div>
+      <div class="btn-group" role="group" aria-label="Third group">
+        <button type="button" class="btn btn-danger">R</button>
+      </div>
+    </div>
 </body>
 </html>
