--- a/plants.html
+++ b/plants.html
@@ -111,5 +111,14 @@
         <button type="button" class="btn btn-danger">R</button>
       </div>
     </div>
+    <div class="markdown" role="group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="basic.html">basic link</a></li>
+        <li><a class="dropdown-item" href="advanced.html">advanced link</a></li>
+      </ul>
+    </div>
 </body>
 </html>
