added hosted link

--- a/plants.html
+++ b/plants.html
@@ -40,25 +40,25 @@
     <div class="col-sm-2" >R</div>
  </div>
  <div class="row">
-    <div class="col-md" >Narrow-leaved Zinnia</div>
+    <div class="col-md" >Narcissus</div>
     <div class="col-md" >American Marigold</div>
-    <div class="col-md" >Garden Impatiens</div> 
+    <div class="col-md" >GAILLARDIA</div> 
     <div class="col-md" >Umbrella sedge</div>
     <div class="col-md" >Ornamental Pepper</div>
     <div class="col-md" >Rose Moss</div>
     </div>
-
+   </div>
     
     <p>While resizing the rendered image, we can see that the row with plant names have been turned into horizontal first</p>
     <div class="container">
-      <img src="Narrow-leaved Zinnia.jpg" class="img-fluid" width="400px" height="400px">
+      <img src="Narcissus.jpg" class="img-fluid" width="500px" height="500px">
       <img src="American Marigold.jpg" class="img-fluid" width="400px" height="400px">
-      <img src="Garden Impatiens.jpg" class="img-fluid" width="500px" height="500px">
+      <img src="Gaillardia.jpg" class="img-fluid" width="500px" height="500px">
     </div>
     <div class="container">
-      <img src="Narrow-leaved Zinnia.jpg" class="img-thumbnail"width="200px">
+      <img src="Narcissus.jpg" class="img-thumbnail"width="300px">
       <img src="American Marigold.jpg" class="img-thumbnail"width="200px">
-      <img src="Garden Impatiens.jpg" class="img-thumbnail"width="300">
+      <img src="Gaillardia.jpg" class="img-thumbnail"width="300">
     </div>
     <table class="table">
       <table class="table table-bordered border-secondary">
@@ -73,7 +73,7 @@
       <tbody>
         <tr class="table-primary">
           <th scope="row" class="table-dark">N</th>
-          <td>Narrow-leaved Zinnia</td>
+          <td>Narcissus</td>
           <td>Nanda Devi</td>
           <td>Nahuel Huapi Lake</td>
         </tr>
@@ -85,7 +85,7 @@
         </tr>
         <tr class="table-primary">
           <th scope="row" class="table-dark">G</th>
-          <td>Garden Impatiens</td>
+          <td>Gaillardia</td>
           <td>Gerlachovka</td>
           <td>Great Salt Lake</td>
 
@@ -120,8 +120,8 @@
         <button type="button" class="btn btn-success">G</button>
       </div>
       <div class="btn-group me-2" role="group" aria-label="Second group">
-        <button type="button" class="btn btn-alert">U</button>
-        <button type="button" class="btn btn-alert">O</button>
+        <button type="button" class="btn btn-warning">U</button>
+        <button type="button" class="btn btn-warning">O</button>
       </div>
       <div class="btn-group" role="group" aria-label="Third group">
         <button type="button" class="btn btn-danger">R</button>
@@ -152,5 +152,39 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <div class="card-group">
+      <div class="card mb-3">
+        <img src="Narcissus.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Narcissus</h5>
+          <p class="card-text" class="btn btn-danger">Narcissus is a genus of predominantly spring flowering perennial plants of the amaryllis family, Amaryllidaceae.
+            Various common names including daffodil,[Note 1] narcissus, and jonquil are used to describe all or some members of the genus.
+             Narcissus has conspicuous flowers with six petal-like tepals surmounted by a cup- or trumpet-shaped corona.
+              The flowers are generally white and yellow (also orange or pink in garden varieties), with either uniform or contrasting coloured tepals and ona.</p>
+              <a href="https://en.wikipedia.org/wiki/Narcissus_(plant)" class="btn btn-primary">Know more about it</a>
+            </div>
+      </div>
+      <div class="card mb-3">
+        <img src="American Marigold.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">American Marigold</h5>
+          <p class="card-text" class="btn btn-danger">Grow taller tagetes toward the center or rear of beds and borders, or as planting pockets in full sun.
+             Mass them in front of shrubs or trees for a big splash of color. You also can use them to make a small hedge around a vegetable or herb garden.
+             American marigolds also work in containers if kept uniformly moist.</p>
+              <a href="https://home.howstuffworks.com/american-marigold.htm" class="btn btn-primary">Know more about it</a>
+            </div>
+      </div>
+      <div class="card mb-3">
+        <img src="Gaillardia.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Gaillardia</h5>
+          <p class="card-text"> Gaillardia is a genus of flowering plants in the family Asteraceae, native to North and South America.
+             It was named after Maître Gaillard de Charentonneau,[5][6] an 18th-century French magistrate who was an enthusiastic botanist. 
+             The common name may refer to the resemblance of the inflorescence to the brightly patterned blankets made by Native Americans, 
+             or to the ability of wild taxa to blanket the ground with colonies.[7] Many cultivars have been bred for ornamental use.</p>
+       <a href="https://en.wikipedia.org/wiki/Gaillardia" class=" btn btn-primary"> know more about it</a>
+       </div>
+      </div>
+      </div>
 </body>
 </html>
