--- a/basic.html
+++ b/basic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>basic.html</title>
-  <h1>Welocme to basic</h1>
+  <h1>Welcome to basic</h1>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
